--- a/res/layout/activity_info_parcel.xml
+++ b/res/layout/activity_info_parcel.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:orientation="vertical" >
 
     <!-- Details parcel layout. Display all informations about a parcel. -->
@@ -11,7 +12,7 @@
 
     <TextView
         android:id="@+id/tv_info_parcel_name"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
@@ -21,28 +22,24 @@
         android:id="@+id/img_parcel_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
+        android:layout_gravity="center_horizontal"
         android:contentDescription="@string/label_parcel_image"
         android:src="@drawable/ic_launcher" />
 
     <!-- Sub layout for all parcel's informations. NOTE: move to grid layout. -->
 
-    <LinearLayout
+    <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:layout_gravity="center"
+        android:columnCount="2" >
 
-        <!-- Row layout -->
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+      
 
             <!-- Label for the actual parcel culture. -->
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/label_parcel_actual_culture" />
 
@@ -50,22 +47,15 @@
 
             <TextView
                 android:id="@+id/tv_info_culture_actual"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="" />
-        </LinearLayout>
 
-        <!-- Row layout -->
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
 
             <!-- Label for the previous parcel culture. -->
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/label_parcel_previous_culture" />
 
@@ -73,22 +63,17 @@
 
             <TextView
                 android:id="@+id/tv_info_culture_last"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="" />
-        </LinearLayout>
 
         <!-- Row layout -->
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
 
             <!-- Label for the parcel surface. -->
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/label_parcel_surface" />
 
@@ -96,10 +81,9 @@
 
             <TextView
                 android:id="@+id/tv_info_parcel_surface"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="" />
-        </LinearLayout>
-    </LinearLayout>
+    </GridLayout>
 
 </LinearLayout>
