--- a/res/layout/activity_command.xml
+++ b/res/layout/activity_command.xml
@@ -2,7 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
+    android:layout_marginBottom="@dimen/activity_vertical_margin"
+    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+    android:layout_marginRight="@dimen/activity_horizontal_margin"
+    android:layout_marginTop="@dimen/activity_vertical_margin"
     android:orientation="vertical" >
 
     <!-- Command activity layout. -->
@@ -21,16 +24,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
         android:orientation="horizontal" >
 
         <!-- Command weight. -->
 
         <EditText
             android:id="@+id/tf_command_weight"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_weight="1"
             android:inputType="number" >
         </EditText>
 
@@ -55,15 +57,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
         android:orientation="horizontal" >
 
         <!-- Command surface. -->
 
         <EditText
             android:id="@+id/tf_command_surface"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:inputType="number" >
         </EditText>
 
@@ -78,9 +80,9 @@
 
         <Button
             android:id="@+id/btn_command_parcels"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="right"
+            android:layout_weight="2"
             android:text="@string/btn_label_command_parcels" />
     </LinearLayout>
 
@@ -104,8 +106,9 @@
 
         <EditText
             android:id="@+id/tf_command_packaging"
-            android:layout_width="wrap_content"
+           android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:inputType="number" >
         </EditText>
 
@@ -137,8 +140,9 @@
 
         <TextView
             android:id="@+id/tv_command_bags"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
 
         <!-- Command order label. -->
 
